Fixed the alignment of image galleries in the grid view for publishable listings

--- a/woost/views/resources/styles/blocks.css
+++ b/woost/views/resources/styles/blocks.css
@@ -117,6 +117,10 @@
     width: 22em;
 }
 
+.PublishableGrid li.entry > .ImageGallery {
+    display: inline-block;
+}
+
 .PublishableGrid li.entry {
     list-style: none;
 }
